# netview

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
netview/: __init__.py  cli.py  main.py  models.py
netview/collectors/: __init__.py  connections.py  dns.py  interfaces.py  routes.py  wireless.py
netview/display/: __init__.py  compact.py  verbose.py
tests/: conftest.py  test_collectors.py  test_display.py  test_interfaces.py
