[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "netview"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3", "mypy>=1"]

[project.scripts]
netview = "netview.cli:main"

[tool.mypy]
python_version = "3.10"
strict = true
